--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "gsv86lib"
 version = "0.1.0"
-description = "Python library for ME-Systeme GSV-8 (wrapped from gsv8pypi_python3)"
+description = "Python library for ME-Systeme GSV-8 and GSV-6 (wrapped from gsv8pypi_python3)"
 authors = [{ name = "ME-Systeme GmbH" }]
 readme = "README.md"
 requires-python = ">=3.8"
